--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,117 @@
-.App {
+@import url('https://fonts.googleapis.com/css2?family=Gowun+Batang:wght@400;700&display=swap');
+
+.container {
+  color: rgba(0, 0, 0, 0.9);
+  font-family: 'Gowun Batang', serif;
+  background: #e7fff1; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #ffeaeb,
+    #fff1d2,
+    #e7fff1
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #ffeaeb,
+    #fff1d2,
+    #e7fff1
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+  width: 80%;
+  height: 100vh;
+  max-width: 1200px;
+  min-width: 800px;
+  margin: auto;
+  padding: 2rem 4rem;
+  box-sizing: border-box;
+}
+
+.title {
+  font-size: 3rem;
+  font-weight: bold;
+  padding: 1rem 0;
+}
+
+.addform__container {
+  padding: 2rem;
+  margin-bottom: 2rem;
+}
+
+.addform {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.addform__label {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.addform__input {
+  background-color: rgba(256, 256, 256, 0.7);
+  border: none;
+  padding: 0.5rem;
+  width: 70%;
+  font-size: 1.5rem;
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px,
+    rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+  border-radius: 8px;
+}
+
+.todo-lists {
+  display: flex;
+  justify-content: space-between;
+}
+
+.todo-list {
+  width: 45%;
+}
+
+.todo-list__title {
+  font-size: 2rem;
+  font-weight: bold;
+}
+
+.todo__container {
+  background-color: rgba(256, 256, 256, 0.7);
+  list-style: none;
+  padding: 2rem 1rem;
+  margin: 2rem;
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px,
+    rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+  border-radius: 8px;
+}
+
+.todo {
+  font-size: 1.2rem;
+  padding-bottom: 1rem;
+}
+
+.buttons {
+  text-align: right;
+}
+
+.btn {
+  color: rgba(0, 0, 0, 0.9);
+  font-family: 'Gowun Batang', serif;
+  background-color: #ffffff;
+  border: 1px solid #d5d9d9;
+  border-radius: 8px;
+  box-shadow: rgba(213, 217, 217, 0.5) 0 2px 5px 0;
+  box-sizing: border-box;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 0.8125rem;
+  line-height: 29px;
+  margin: 0 0.5rem;
+  padding: 0.2rem 1rem;
+  position: relative;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.todo-btn:focus {
+  border-color: #008296;
+  box-shadow: rgba(213, 217, 217, 0.5) 0 2px 5px 0;
+  outline: 0;
 }
