css: 배경 그라데이션 변경

--- a/src/index.css
+++ b/src/index.css
@@ -127,3 +127,19 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
+body {
+  background: #e7fff1; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #ffeaeb,
+    #fff1d2,
+    #e7fff1
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #ffeaeb,
+    #fff1d2,
+    #e7fff1
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
