--- a/src/App.css
+++ b/src/App.css
@@ -3,22 +3,8 @@
 .container {
   color: rgba(0, 0, 0, 0.9);
   font-family: 'Gowun Batang', serif;
-  background: #e7fff1; /* fallback for old browsers */
-  background: -webkit-linear-gradient(
-    to right,
-    #ffeaeb,
-    #fff1d2,
-    #e7fff1
-  ); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(
-    to right,
-    #ffeaeb,
-    #fff1d2,
-    #e7fff1
-  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
   width: 80%;
-  height: 100vh;
+  min-height: 100vh;
   max-width: 1200px;
   min-width: 800px;
   margin: auto;
