--- a/src/components/Todo/style.css
+++ b/src/components/Todo/style.css
@@ -6,12 +6,16 @@
   box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px,
     rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
   border-radius: 8px;
-  cursor: pointer;
 }
 
 .todo {
+  cursor: pointer;
   font-size: 1.2rem;
-  padding-bottom: 1rem;
+  padding-bottom: 2rem;
+}
+
+.todo:hover {
+  color: #e17aa0;
 }
 
 .buttons {
