Design: Styled Component로 변경

--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,1 @@
-@import url('https://fonts.googleapis.com/css2?family=Gowun+Batang:wght@400;700&display=swap');
-
-.container {
-  color: rgba(0, 0, 0, 0.9);
-  background-color: rgba(256, 256, 256, 0.7);
-  border-radius: 30px;
-  font-family: 'Gowun Batang', serif;
-  width: 80%;
-  min-height: 90vh;
-  max-width: 1200px;
-  min-width: 800px;
-  padding: 4rem;
-  margin: 2rem auto;
-  box-sizing: border-box;
-}
-
-.todo-lists {
-  display: flex;
-  justify-content: space-between;
-}
+/* @import url('https://fonts.googleapis.com/css2?family=Gowun+Batang:wght@400;700&display=swap'); */
